[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/DeckBuilder/DeckList/DropTarget.gd" type="Script" id=1]
[ext_resource path="res://scenes/DeckBuilder/DeckList/DeckListCard.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/Concert_One/ConcertOne-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://scenes/DeckBuilder/DeckList/DeckListCardAtlasTextureMeccgEs.tres" type="Texture" id=5]

[sub_resource type="Theme" id=1]
Button/colors/font_color = Color( 0.878431, 0.878431, 0.878431, 1 )
Button/colors/font_color_disabled = Color( 0.878431, 0.878431, 0.878431, 0.588235 )
Button/colors/font_color_hover = Color( 0.94, 0.94, 0.94, 1 )
Button/colors/font_color_pressed = Color( 1, 1, 1, 1 )
Button/constants/hseparation = 2
Button/fonts/font = null
Button/styles/disabled = null
Button/styles/focus = null
Button/styles/hover = null
Button/styles/normal = null
Button/styles/pressed = null

[sub_resource type="DynamicFont" id=2]
size = 24
use_filter = true
extra_spacing_top = -3
extra_spacing_bottom = 8
font_data = ExtResource( 3 )

[node name="DeckListCard" type="AspectRatioContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1570.0
margin_bottom = -871.0
ratio = 7.559
script = ExtResource( 2 )
count = NodePath("HBoxContainer/Count")
title_art = NodePath("HBoxContainer/TitleArt")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 30.0
margin_bottom = 31.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Count" type="Button" parent="HBoxContainer"]
margin_right = 30.0
margin_bottom = 31.0
rect_min_size = Vector2( 30, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "1"
script = ExtResource( 1 )

[node name="TitleArt" type="TextureRect" parent="HBoxContainer"]
margin_left = 30.0
margin_right = 30.0
margin_bottom = 31.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 9.0
texture = ExtResource( 5 )
expand = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="dropped" from="HBoxContainer/Count" to="." method="_on_Count_dropped"]
[connection signal="mouse_entered" from="HBoxContainer/Count" to="." method="_on_Count_mouse_entered"]
[connection signal="mouse_exited" from="HBoxContainer/Count" to="." method="_on_Count_mouse_exited"]
[connection signal="pressed" from="HBoxContainer/Count" to="." method="_on_Count_pressed"]
[connection signal="dropped" from="HBoxContainer/TitleArt" to="." method="_on_TitleArt_dropped"]
[connection signal="gui_input" from="HBoxContainer/TitleArt" to="." method="_on_TitleArt_gui_input"]
[connection signal="mouse_entered" from="HBoxContainer/TitleArt" to="." method="_on_TitleArt_mouse_entered"]
[connection signal="mouse_exited" from="HBoxContainer/TitleArt" to="." method="_on_TitleArt_mouse_exited"]
